# hvcwatch

./: .env.example  .radon.cfg  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml  main.yml  update-sec-data.yml
data/: company_tickers.json
src/hvcwatch/: config.py  db.py  email_monitor.py  get_ticker_data.py  logging.py  main.py  models.py  notification.py  types.py  utils.py  version.py
tests/: conftest.py  test_config.py  test_db.py  test_email_monitor.py  test_main.py  test_models.py  test_notification.py  test_utils.py
