[project]
name = "hvcwatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
requires-python = ">=3.14,<3.15"
dependencies = [
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "exchange-calendars>=4.0.0",
    "discord-webhook>=1.3.0",
    "rich>=14.1.0",
    "imap-tools>=1.11.0",
    "pytest-env>=1.1.5",
    "sentry-sdk>=2.42.0",
]

[project.scripts]
hvcwatch = "hvcwatch.main:main"
get-ticker-data = "hvcwatch.get_ticker_data:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "radon>=6.0.1",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--color=yes",
    "--disable-warnings",
]
# Having problems with tests? Uncomment the following line to see more output.
# log_cli = false
# log_level = "DEBUG"
log_format = "%%(asctime)s %%(levelname)s %%(message)s"
log_date_format = "%%Y-%%m-%%d %%H:%%M:%%S"
testpaths = ["tests"]
env = [
    "FASTMAIL_USER=test_user",
    "FASTMAIL_PASS=test_password",
    "DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/test",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
fix = true

[tool.ruff.format]
preview = true
